# gbemu

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  WORKFLOW.md
crates/gb-core/: Cargo.toml
crates/gb-core/src/: joypad.rs  lib.rs  savestate.rs  serial.rs  system.rs  timer.rs
crates/gb-core/src/apu/: channel.rs  mixer.rs  mod.rs
crates/gb-core/src/cartridge/: mod.rs
crates/gb-core/src/cpu/: bus.rs  execute.rs  mod.rs  registers.rs
crates/gb-core/src/cpu/execute/: cb.rs
crates/gb-core/src/mmu/: mod.rs
crates/gb-core/src/ppu/: mod.rs
crates/gb-tui/: Cargo.toml
crates/gb-tui/src/: app.rs  audio.rs  input.rs  log_ring.rs  main.rs  palette.rs  save.rs
crates/gb-tui/src/debug/: breakpoints.rs  disasm.rs  log_panel.rs  memory.rs  mod.rs  overlay.rs  registers.rs  status.rs  vram.rs
crates/gb-tui/src/render/: layout.rs  mod.rs  video.rs
roms/: README.md
tests/blargg/: Cargo.toml
tests/blargg/src/: lib.rs  ram_report.rs
tests/blargg/tests/: cpu_instrs.rs  dmg_sound.rs  halt_bug.rs  instr_timing.rs  mem_timing.rs  mem_timing_2.rs  oam_bug.rs
tests/dmg_acid2/: Cargo.toml
tests/dmg_acid2/tests/: dmg_acid2.rs
